--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "joeroddy",
-  "version": "1.0.0",
-  "description": "Posting form data like jquery's &.post",
+  "name": "form-urlencoded-post",
+  "version": "1.0.1",
+  "description": "Posting form data like jquery's $.post",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
